--- a/order-app/package.json
+++ b/order-app/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "formik": "^2.3.0",
@@ -20,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
+    "react-redux": "^8.0.7",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "yup": "^1.2.0"
