Next-Auth installation, Authentication with GitHub, and Database registration with GitHub have been completed

--- a/order-app/.env
+++ b/order-app/.env
@@ -1,1 +1,4 @@
 MONGODB_URI=mongodb+srv://erknmckr1:Asdfgh123.@cluster0.rmc7hfr.mongodb.net/food_ordering?retryWrites=true&w=majority
+
+GITHUB_ID=1ac683fdd64c5a3f6a22
+GITHUB_SECRET=63a1fe91f3549448f2707310c1e6820ab51a9f08
