--- a/order-app/package.json
+++ b/order-app/package.json
@@ -12,12 +12,15 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.3",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "formik": "^2.3.0",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "next": "^13.2.4",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
