The registration API and the registration client process have been completed.

--- a/order-app/.env
+++ b/order-app/.env
@@ -1,4 +1,6 @@
 MONGODB_URI=mongodb+srv://erknmckr1:Asdfgh123.@cluster0.rmc7hfr.mongodb.net/food_ordering?retryWrites=true&w=majority
 
-GITHUB_ID=1ac683fdd64c5a3f6a22
-GITHUB_SECRET=63a1fe91f3549448f2707310c1e6820ab51a9f08
+GITHUB_ID=cb8fb61439f7cdd9eb70
+GITHUB_SECRET=e2a1e58198bb0d21991f11a705cf4bd8259271e9
+
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
