--- a/order-app/package.json
+++ b/order-app/package.json
@@ -14,6 +14,8 @@
     "@mui/material": "^5.13.3",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "formik": "^2.3.0",
