--- a/order-app/package.json
+++ b/order-app/package.json
@@ -29,6 +29,7 @@
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.7",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "yup": "^1.2.0"
   },
